fix 	common.css, 		salesInputIntText追加 	menu.html, 		hrefに#から実際のuri追加 	S0010.html,S0011.html, 		個数単価を右寄せになるように修正 	S0020.html, 			cellpadingの代わりに 			border-collapse: separate; 			border-spacing: 20px;を追加 		S0021.html, 			表に上下の罫線を追加 		S0022.html, 			未完成分を追記 delete 	S0010.html 		誤って同じ名前のファイルを別デイレクトリ作ってしまったため削除

--- a/WebContent/CSS/S0020.css
+++ b/WebContent/CSS/S0020.css
@@ -5,3 +5,11 @@
 	margin-left: 77px;
 }
 
+.tablePosition {
+	position: relative;
+	top: 60px;
+	left: 300px;
+	/* cellpadingの代わり↓*/
+	border-collapse: separate;
+	border-spacing: 20px;
+}
